US1.2  Accéder à la liste des salles  implémenté, reste à tester.

--- a/sfapp/templates/base.html.twig
+++ b/sfapp/templates/base.html.twig
@@ -14,7 +14,14 @@
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     </head>
     <body>
-        {% block body %}
-        {% endblock %}
+
+    <nav class="bg-white dark:bg-gray-900 w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-content mx-auto p-4">
+                <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
+        </div>
+    </nav>
+
+    {% block body %}{% endblock %}
     </body>
 </html>
