--- a/sfapp/templates/infra/modifier-sa.html.twig
+++ b/sfapp/templates/infra/modifier-sa.html.twig
@@ -8,35 +8,64 @@
 
     <h1 class="my-12">Modifier le Système d'Acquisition n°XX</h1>
 
-    <form>
+    <form id="formulaire" method="post">
         <div class="mb-6">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Adresse MAC du Système d'Acquisition</label>
-            <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Exemple : 00:00:00:00:00:00" required>
+            <label for="macAddr" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Adresse MAC du Système d'Acquisition</label>
+            <input type="text" id="adresseMac" name="adresseMac" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ systemeAcquisition.adresseMac }}" placeholder="Exemple : 00:00:00:00:00:00" required>
         </div>
         <div class="grid gap-6 mb-6 md:grid-cols-2">
             <div>
-                <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Bâtiment</label>
-                <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option selected>Choisissez un bâtiment</option>
+                <label for="batiment" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Bâtiment</label>
+                <select id="batiment" name="batiment" onchange="onBatimentChange()" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <option value="-1"selected>Choisissez un bâtiment</option>
                     {% for batiment in listeBatiments %}
                         <option value='{{ batiment.id }}'>{{ batiment.nom }}</option>
                     {% endfor %}
                 </select>
             </div>
             <div>
-                <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Salle associée</label>
-                <select id="countries" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                    <option selected>Choisissez une salle</option>
-                    {% for salle in listeSalles %}
-                        <option value='{{ salle.id }}'>{{ salle.numero }}</option>
-                    {% endfor %}
+                <label for="salle" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Salle associée</label>
+                <select id="salle" name="salle" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                    <option value="-1" selected>Choisissez d'abord un bâtiment</option>
                 </select>
             </div>
         </div>
-        <button type="submit" class="float-right focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Valider</button>
+        <button type="submit" class="float-right focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Valider</button>
+
     </form>
 
-
-
 </div>
+
+<script>
+    function onBatimentChange() {
+        let batiment = document.getElementById('batiment');
+        let salles = document.getElementById('salle');
+        let batimentId = batiment.value;
+
+        salles.options.length = 0;
+
+
+
+        let nbSalles = 0;
+
+        {% for salle in listeSalles %}
+        if ({{ salle.batiment.id }} == batimentId)
+        {
+            if (nbSalles == 0){
+                salles.options.add(new Option("Choisissez une salle", -1));
+                salles.disabled = false;
+            }
+            salles.options.add(new Option('{{ salle.numero }}', {{ salle.id }}));
+            nbSalles++;
+        }
+        {% endfor %}
+
+        if (nbSalles == 0) {
+            salles.options.length = 0;
+            salles.options.add(new Option("Aucune salle trouvée", -1));
+        }
+
+    }
+</script>
+
 {% endblock %}
