ajout des vérifications du formulaire de modification du système de modifications : format de l'adresse mac, unicité de l'adresse mac, salle non uitilisé par un autre sytème

--- a/sfapp/templates/infra/modifier-sa.html.twig
+++ b/sfapp/templates/infra/modifier-sa.html.twig
@@ -8,10 +8,21 @@
 
     <h1 class="my-12">Modifier le Système d'Acquisition n°{{ id }}</h1>
 
+
+
     <form id="formulaire" method="post">
         <div class="mb-6">
+            {% if erreur is not null and (erreur['code'] == 2 or erreur['code'] == 3) %}
+            <label for="macAddr" class="block mb-2 text-sm font-medium text-red-900 dark:text-red">Adresse MAC du Système d'Acquisition</label>
+            {% else %}
             <label for="macAddr" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Adresse MAC du Système d'Acquisition</label>
+            {% endif %}
             <input type="text" id="adresseMac" name="adresseMac" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="{{ systemeAcquisition.adresseMac }}" placeholder="Exemple : 00:00:00:00:00:00" required>
+            {% if erreur is not null and erreur['code'] == 2 %}
+            <p id="outlined_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400"><span class="font-medium"> L'adresse MAC saisie ( {{ erreur['mac']}} ) est invalide, il faut respecter le format XX:XX:XX:XX:XX:XX </span></p>
+            {% elseif erreur is not null and erreur['code'] == 3 %}
+            <p id="outlined_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400"><span class="font-medium"> L'adresse MAC saisie ( {{ erreur['mac']}} ) est déjà utilisée par le système d'acquisition n° {{ erreur['systeme']}} </span></p>
+            {% endif %}
         </div>
         <div class="grid gap-6 mb-6 md:grid-cols-2">
             <div>
@@ -24,14 +35,21 @@
                 </select>
             </div>
             <div>
-                <label for="salle" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Salle associée</label>
+                {% if erreur is not null and erreur['code'] == 1 %}
+                    <label for="salle" class="block mb-2 text-sm font-medium text-red-900 dark:text-red">Salle associée</label>
+                {% else %}
+                    <label for="salle" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Salle associée</label>
+                {% endif %}
                 <select id="salle" name="salle" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                     <option value="-1" selected>Choisissez d'abord un bâtiment</option>
                 </select>
+                {% if erreur is not null and erreur['code'] == 1 %}
+                <p id="outlined_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400"><span class="font-medium"> La salle selectionnée ({{ erreur['batiment'] }}, salle {{ erreur["salle"] }}) est déjà liée au système d'acquisition n°{{ erreur["systeme-lie"]}}, veulliez en selectionner une autre </span></p>
+                {% endif %}
+
             </div>
         </div>
-        <button type="submit" class="float-right focus:outline-none text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Valider</button>
-
+        <button type="submit" class="float-left text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Valider</button>
     </form>
 
 </div>
