--- a/sfapp/templates/infra/batiments-et-salles.html.twig
+++ b/sfapp/templates/infra/batiments-et-salles.html.twig
@@ -18,6 +18,7 @@
 
     <div class="my-12 mx-auto max-w-6xl">
 
+        <h1 class="mb-4 text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-4xl lg:text-5xl dark:text-white">Salles disponibles</h1>
 
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
