--- a/sfapp/templates/infra/liste-dispositifs.html.twig
+++ b/sfapp/templates/infra/liste-dispositifs.html.twig
@@ -16,7 +16,7 @@
                         Identifiant
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Adresse MAC
+                        Adresse Mac
                     </th>
                     <th scope="col" class="px-6 py-3">
                         Bâtiment
