Ajout des tests des entitées Batiment, Salle, SystemeAcquisition, de la route /infra/batiments-et-salles et de la vue qui y correspond

--- a/sfapp/templates/infra/batiments-et-salles.html.twig
+++ b/sfapp/templates/infra/batiments-et-salles.html.twig
@@ -43,7 +43,7 @@
                         Nombre de portes
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Contient des Ordinateurs
+                        Contient des ordinateurs
                     </th>
                 </tr>
                 </thead>
