Navbar adaptable finie et fonctionnelle

--- a/webapp/sfapp/templates/accueil/technicien.html.twig
+++ b/webapp/sfapp/templates/accueil/technicien.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% set nav_links = {
+    '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+} %}
+
 {% block title %}Hello TechnicienController!{% endblock %}
 
 {% block body %}
