--- a/webapp/sfapp/templates/accueil/charge-de-mission.html.twig
+++ b/webapp/sfapp/templates/accueil/charge-de-mission.html.twig
@@ -1,4 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig'%}
+
+{% set nav_links = {
+    '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+} %}
 
 {% block title %}Connexion{% endblock %}
 
