Mise en place de la page de navigation de l'infrastructure

--- a/webapp/sfapp/templates/accueil/technicien.html.twig
+++ b/webapp/sfapp/templates/accueil/technicien.html.twig
@@ -16,7 +16,7 @@
             </div>
             <h2 class="w-64 text-center mt-5 text-xl">Relevés</h2>
         </a>
-        <a href="/infra/tech" id="infra">
+        <a href="/infra/technicien" id="infra">
             <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                 <box-icon name='buildings' type='solid' class="w-1/3 h-1/3"></box-icon>
             </div>
