--- a/webapp/sfapp/templates/infra/index.html.twig
+++ b/webapp/sfapp/templates/infra/index.html.twig
@@ -2,22 +2,28 @@
 
 {% block title %}Navigation{% endblock %}
 
+{% if is_granted('ROLE_CHARGE_DE_MISSION') %}
+    {% set prefix = 'charge-de-mission' %}
+{% elseif is_granted('ROLE_TECHNICIEN') %}
+    {% set prefix = 'technicien' %}
+{% endif %}
+
 {% block body %}
     <div class="h-48 w-full"></div>
     <div class="mx-auto my-auto w-3/4 min-h-64 flex flex-row justify-evenly mt-12">
-        <a href="/infra/charge-de-mission/batiments" id="batiments">
+        <a href="/infra/{{ prefix }}/batiments" id="batiments">
             <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                 <box-icon name='buildings' type='solid' class="w-1/3 h-1/3"></box-icon>
             </div>
             <h2 class="w-64 text-center mt-5 text-xl">Bâtiments</h2>
         </a>
-        <a href="/infra/charge-de-mission/salles" id="salles">
+        <a href="/infra/{{ prefix }}/salles" id="salles">
             <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                 <box-icon type='solid' name='door-open' class="w-1/3 h-1/3"></box-icon>
             </div>
             <h2 class="w-64 text-center mt-5 text-xl">Salles</h2>
         </a>
-        <a href="/infra/charge-de-mission/systemes-acquisition" id="systemesacquisition">
+        <a href="/infra/{{ prefix }}/systemes-acquisition" id="systemesacquisition">
             <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                 <box-icon type='solid' name='thermometer' class="w-1/3 h-1/3"></box-icon>
             </div>
