--- a/webapp/sfapp/templates/infra/salle.html.twig
+++ b/webapp/sfapp/templates/infra/salle.html.twig
@@ -14,19 +14,16 @@
 }
 %}
 
-
+{% set nav_links = {
+    '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
+    '/infra/charge-de-mission' : "<box-icon name='buildings'></box-icon> Infrastructure",
+    '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+} %}
 
 {% block body %}
 
-    <nav class="bg-white dark:bg-gray-900 w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
-        <div class="max-w-screen-xl flex flex-wrap items-center justify-content mx-auto p-4">
-            <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
-        </div>
-        <a href="/infra/charge-de-mission/">Infrastructure</a>
-        <a href="/releves">Relevés</a>
-    </nav>
-    <h1>Liste des salles accesssibles :</h1>
+    <h1 class="w-full text-center text-2xl py-20">Liste des salles accesssibles :</h1>
+
     <div class="max-w-screen-xl w-5/6 mx-auto">
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
@@ -54,13 +51,13 @@
                         Contient des PC
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Système d'exploitation
+                        Système d'acquisition
                     </th>
                 </tr>
                 </thead>
                 <tbody>
 
-                {% for salle in listeSalles | sort((a, b) => a.batiment.nom <=> b.batiment.nom ) | sort((a, b) => a.numero <=> b.numero ) %}
+                {% for salle in listeSalles | sort((a, b) => a.batiment.nom <=> b.batiment.nom ) | sort((a, b) => a.nom <=> b.nom ) %}
 
                     <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
@@ -86,11 +83,11 @@
                         </td>
 
                         <td class="px-6 py-4">
-                            {{ salle.nombrePorte }}
+                            {{ salle.NbPortes }}
                         </td>
 
                         <td class="px-6 py-4">
-                            {{ salle.nombrFenetre }}
+                            {{ salle.nbFenetres }}
                         </td>
 
                         <td class="px-6 py-4">
@@ -98,10 +95,11 @@
                         </td>
 
                         <td class="px-6 py-4">
-                            {% if salle.systemeAcquisiton is null %}
+                            {% if salle.SystemeAcquisition is null %}
                                 -
                             {% else %}
-                                {{ salle.systemeAquisition.tag }}
+                                {{ salle.SystemeAcquisition.tag }}
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
