--- a/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
+++ b/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
@@ -9,24 +9,36 @@
 {% block body %}
     <main class="flex flex-col items-center">
         <h1 class="w-full text-center text-2xl py-20">Liste des systèmes d'acquisition</h1>
-        <div class="p-4 bg-gray-200 rounded-2xl">
-            <h2>Systèmes d'acquisition fonctionnels</h2>
-            <table class="border border-black">
-                <tr class="border border-black p-6 font-normal bg-stone-200">
-                    <th class=" pl-1.5 pr-20 py-3 font-normal">Tag</th>
-                    <th class=" pl-1.5 pr-20 py-3 font-normal">Bâtiment</th>
-                    <th class=" pl-1.5 pr-20 py-3 font-normal">Salle</th>
-                    <th class=" pl-1.5 pr-20 py-3 font-normal">Adresse MAC</th>
-                </tr>
-                {% for systemeAcquisition in listesSAFonctionnels %}
-                    <tr class="border border-black bg-stone-100">
-                        <th class="th-fonctionnel pl-1.5 pr-20 py-3 text-center">{{ systemeAcquisition.tag }}</th>
-                        <td class=" pl-1.5 pr-20 py-3 text-center">{{ systemeAcquisition.salle.batiment.nom }}</td>
-                        <td class=" pl-1.5 pr-20 py-3 text-center">{{ systemeAcquisition.salle.nom }}</td>
-                        <td class=" pl-1.5 pr-20 py-3 text-center">{{ systemeAcquisition.adresseMac }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
+        <div class="max-w-screen-xl w-5/6 mx-auto">
+            <h2>Systèmes d'acquisition fonctionnels :</h2>
+            <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+                <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                        <tr>
+                            <th scope="col" class="px-6 py-3">Tag</th>
+                            <th scope="col" class="px-6 py-3">Bâtiment</th>
+                            <th scope="col" class="px-6 py-3">Salle</th>
+                            <th scope="col" class="px-6 py-3">Adresse MAC</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for systemeAcquisition in listeSAFonctionnels %}
+                            <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+                                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"> {{ systemeAcquisition.tag }}</th>
+                                {% if systemeAcquisition.salle != null  %}
+                                    <td class="px-6 py-4">{{ systemeAcquisition.salle.batiment.nom }}</td>
+                                    <td class="px-6 py-4">{{ systemeAcquisition.salle.nom }}</td>
+                                {% endif %}
+                                {% if systemeAcquisition.salle == null  %}
+                                    <td class="px-6 py-4">-</td>
+                                    <td class="px-6 py-4">-</td>
+                                {% endif %}
+                                <td class="px-6 py-4">{{ systemeAcquisition.adresseMac }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
 
