--- a/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
+++ b/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
@@ -10,7 +10,7 @@
     <main class="flex flex-col items-center">
         <h1 class="w-full text-center text-2xl py-20">Liste des systèmes d'acquisition</h1>
         <div class="max-w-screen-xl w-5/6 mx-auto">
-            <h2>Systèmes d'acquisition fonctionnels :</h2>
+            <h2>Systèmes d'acquisition fonctionnels</h2>
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                 <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                     <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
