--- a/webapp/sfapp/templates/infra/batimentAjouter.html.twig
+++ b/webapp/sfapp/templates/infra/batimentAjouter.html.twig
@@ -12,18 +12,19 @@
 
 
     <main class="flex flex-col items-center">
-        <h1 class="w-full text-center text-2xl py-5">Ajouter un bâtiment</h1>
-        <div class="max-w-sm mx-auto p-5">
+        <h1 class="w-full text-center text-2xl py-5 mt-10">Ajouter un bâtiment</h1>
             {{ form_start(form) }}
+            <div class="flex flex-col items-center my-6">
                 {{ form_row(form.nom, {
-                    row_class: 'pb-3',
+                    row_class: 'pb-3 flex flex-col items-center',
                     label_class: 'block mb-2 text-sm font-medium text-gray-900',
                     widget_class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5',
                 }) }}
                 <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg
-                text-sm w-full sm:w-auto px-4 py-2 text-center">Ajouter</button>
+                 px-5 py-2.5 my-6 text-center">Ajouter</button>
+            </div>
             {{ form_end(form) }}
-        </div>
+
     </main>
 
 {% endblock %}
