--- a/webapp/sfapp/templates/infra/batiments.html.twig
+++ b/webapp/sfapp/templates/infra/batiments.html.twig
@@ -11,8 +11,17 @@
 {% block body %}
 
     <main class="flex flex-col items-center">
-        <h1 class="w-full text-center text-2xl py-20">Liste des Bâtiments</h1>
-
+        <h1 class="w-full text-center text-2xl py-5 mt-10">Liste des Bâtiments</h1>
+        {% if is_granted('ROLE_CHARGE_DE_MISSION') %}
+            <div class="w-1/4 flex flex-row-reverse my-6">
+                <a href="/infra/charge-de-mission/batiments/ajouter">
+                    <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5
+                    mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Ajouter un bâtiment
+                    </button>
+                </a>
+            </div>
+        {% endif %}
         <div class="max-w-screen-xl w-1/4 mx-auto">
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                 <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
