Ajout route listant les batiments pour le technicien

--- a/webapp/sfapp/templates/infra/batiments.html.twig
+++ b/webapp/sfapp/templates/infra/batiments.html.twig
@@ -2,11 +2,19 @@
 
 {% block title %}Batiments{% endblock %}
 
-{% set nav_links = {
-    '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
-    '/infra/charge-de-mission' : "<box-icon name='buildings'></box-icon> Infrastructure",
-    '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
-} %}
+{% if is_granted('ROLE_CHARGE_DE_MISSION') %}
+    {% set nav_links = {
+        '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
+        '/infra/charge-de-mission/' : "<box-icon name='buildings'></box-icon> Infrastructure",
+        '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+    } %}
+{% elseif is_granted('ROLE_TECHNICIEN') %}
+    {% set nav_links = {
+        '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
+        '/infra/technicien' : "<box-icon name='buildings'></box-icon> Infrastructure",
+        '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+    } %}
+{% endif %}
 
 {% block body %}
 
