--- a/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
+++ b/webapp/sfapp/templates/infra/systemes-acquisition.html.twig
@@ -1,16 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% if is_granted('ROLE_CHARGE_DE_MISSION') %}
-    {% set prefix = 'charge-de-mission' %}
-{% elseif is_granted('ROLE_TECHNICIEN') %}
-    {% set prefix = 'technicien' %}
-{% endif %}
 
-{% set nav_links = {
-    '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
-    '/infra/{{ prefix }}' : "<box-icon name='buildings'></box-icon> Infrastructure",
-    '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
-} %}
+
+{% if is_granted('ROLE_CHARGE_DE_MISSION') %}
+    {% set nav_links = {
+        '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
+        '/infra/charge-de-mission/' : "<box-icon name='buildings'></box-icon> Infrastructure",
+        '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+    } %}
+{% elseif is_granted('ROLE_TECHNICIEN') %}
+    {% set nav_links = {
+        '/releves' : "<box-icon name='stats' ></box-icon> Relevés",
+        '/infra/technicien' : "<box-icon name='buildings'></box-icon> Infrastructure",
+        '/deconnexion' : "<box-icon name='exit'></box-icon> Déconnexion"
+    } %}
+{% endif %}
 
 {% block title %}Systemes d'acquisition{% endblock %}
 
