--- a/webapp/sfapp/templates/releves/index.html.twig
+++ b/webapp/sfapp/templates/releves/index.html.twig
@@ -2,11 +2,16 @@
 
 {% block title %}Liste des relevés{% endblock %}
 
+{%  set corresp = {
+    'temp' : 'température',
+    'co2' : "qualité de l'air",
+    'hum' : "humidité"
+    } %}
+
 {% block body %}
 
-    <div class="max-w-6xl mx-auto my-12">
+    <div class="max-w-6xl w-5/6 mx-auto my-12">
         <h1 class="my-12 text-2xl w-full text-center">Liste des relevés</h1>
-
         <div class="bg-gray-50 dark:bg-gray-800 rounded-t-lg min-h-2 p-4 flex flex-row justify-between items-center shadow-md">
             {% if salle_actuelle is not defined %}
                 <div class="flex flex-row ml-4">
@@ -43,30 +48,24 @@
                             Horodatage
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Température (°C)
+                            Type de donnée
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            Qualité de l'air (ppm)
-                        </th>
-                        <th scope="col" class="px-6 py-3">
-                            Humidité (%)
+                            Valeur
                         </th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for releve in salle_actuelle.releves %}
+                    {% for releve in releves | sort((a, b) => (a["date"] | date("d/m/Y H:i:s")) <=> ( b["date"] | date("d/m/Y H:i:s")) ) %}
                         <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
                             <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                                {{ releve.horodatage | date("d/m/Y H:i:s") }}
+                                {{ releve["date"] | date("d/m/Y H:i:s") }}
                             </th>
                             <td class="px-6 py-4">
-                                {{ releve.temperature | default("-") }}
+                                {{ corresp[releve["type"]] | default("-") }}
                             </td>
                             <td class="px-6 py-4">
-                                {{ releve.qualiteAir | default("-") }}
-                            </td>
-                            <td class="px-6 py-4">
-                                {{ releve.humidite | default("-") }}
+                                {{ releve["valeur"] | default("-") }}
                             </td>
                         </tr>
                     {% endfor %}
