--- a/webapp/sfapp/templates/base.html.twig
+++ b/webapp/sfapp/templates/base.html.twig
@@ -20,10 +20,10 @@
 
     <nav class="bg-white dark:bg-gray-900 w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
         <div class="flex flex-row justify-between">
-            <div class="flex flex-wrap items-center justify-content mx-auto p-4">
-                <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
-                <span class="ml-8 self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
-            </div>
+                <a href="/connexion" class="flex flex-wrap items-center justify-content mx-auto p-4">
+                    <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
+                    <span class="ml-8 self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
+                </a>
             <div class="max-w-screen-xl flex flex-wrap items-center justify-content mx-auto p-4">
                 {% if nav_links is defined %}
                     {% for link, label in nav_links %}
