Revert "Merge branch 'develop-Technicien-consulter-les-données-du-SA-sur-l'application-web' of https://forge.iut-larochelle.fr/2023-2024-but-info2-a-sae34/m2/m23/but-info2-a-sae3-docker-stack into develop-Technicien-consulter-les-données-du-SA-sur-l'application-web"
This reverts commit cf5505618c9fe5463a24a3cbc51335ed1edd0f1b, reversing
changes made to 4a04fb34747d5aa16cb8a37e429fe5bd72306e45.

--- a/webapp/sfapp/templates/cdm/plan.html.twig
+++ b/webapp/sfapp/templates/cdm/plan.html.twig
@@ -71,20 +71,7 @@
                         {{ salle.nombreFenetre }}
                     </td>
                     <td class="px-6 py-4">
-                        {% if etat[salle.id] == 'Installation demandée' %}
-                            <div class="p-1 bg-amber-500 text-white rounded-lg flex flex-row justify-evenly items-center">
-                                <span>Installation demandée</span>
-                            </div>
-                        {% elseif etat[salle.id] == 'Opérationnel' %}
-                            <div class="p-1 bg-emerald-500 text-white rounded-lg flex flex-row justify-evenly items-center">
-                                <span>Opérationnel</span>
-                            </div>
-                        {% elseif etat[salle.id] == 'Non installé' %}
-                            <a href="/plan/{{ salle.id }}/demander-installation" class="p-1 bg-blue-500 hover:bg-blue-700 duration-300 text-white rounded-lg flex flex-row justify-evenly items-center">
-                                <span>Demander une installation</span>
-                                <box-icon name='right-arrow-alt' color='#ffffff' ></box-icon>
-                            </a>
-                        {% endif %}
+                        {{ etat[salle.id] }}
                     </td>
                 </tr>
                 </tbody>
