--- a/webapp/sfapp/templates/accueil/charge-de-mission.html.twig
+++ b/webapp/sfapp/templates/accueil/charge-de-mission.html.twig
@@ -17,11 +17,11 @@
             </div>
             <h2 class="w-64 text-center mt-5 text-xl">Relevés</h2>
         </a>
-        <a href="/plan" id="infra">
+        <a href="/infra/charge-de-mission" id="infra">
             <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
                 <box-icon name='buildings' type='solid' class="w-1/3 h-1/3"></box-icon>
             </div>
-            <h2 class="w-64 text-center mt-5 text-xl">Plan d'expérimentation</h2>
+            <h2 class="w-64 text-center mt-5 text-xl">Infrastructure</h2>
         </a>
     </div>
 
