--- a/webapp/sfapp/templates/base.html.twig
+++ b/webapp/sfapp/templates/base.html.twig
@@ -20,7 +20,7 @@
 
     <nav class="bg-white dark:bg-gray-900 w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
         <div class="flex flex-row justify-between">
-                <a href="/connexion" class="flex flex-wrap items-center justify-content mx-auto p-4">
+                <a href="/accueil" class="flex flex-wrap items-center justify-content mx-auto p-4">
                     <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
                     <span class="ml-8 self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
                 </a>
