--- a/webapp/sfapp/templates/base.html.twig
+++ b/webapp/sfapp/templates/base.html.twig
@@ -25,11 +25,19 @@
                     <span class="ml-8 self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
                 </a>
             <div class="max-w-screen-xl flex flex-wrap items-center justify-content mx-auto p-4">
+                {% if app.user %}
+
+                    <a href="/deconnexion" class="mx-5 flex flex-row justify-center items-center gap-2 hover:underline"><box-icon name='exit'></box-icon> Déconnexion</a>
+
+                {% endif %}
                 {% if nav_links is defined %}
                     {% for link, label in nav_links %}
                         <a href="{{ link }}" class="mx-5 flex flex-row justify-center items-center gap-2 hover:underline">{{ label | raw }}</a>
                     {% endfor %}
                 {% endif %}
+
+
+
             </div>
         </div>
     </nav>
